--- a/values.yaml
+++ b/values.yaml
@@ -105,3 +105,11 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+spec:
+  destination:
+    server: https://kubernetes.default.svc
+  source:
+    repoURL: https://github.com/snagaram3/TestRepo.git
+    targetRevision: HEAD
+    
